 * lib/Mail/DKIM/Verifier.pm: remove dependency on Error module
 * README: what I'm interested in if make test fails
 * lib/Mail/DKIM/Signer.pm: fix bug reported by dairiki, who noticed that
   the Signer class ignored the signature-specified algorithm when
   building the algorithm object
 * scripts/dkimsign.pl: update POD a bit
 * scripts/dkimverify.pl: add POD

2007-10-03: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Canonicalization/DkCommon.pm: attempt at making the
   header handling algorithm easier to understand
 * t/signer.t: test case for unreadable private key
 * lib/Mail/DKIM/PrivateKey.pm: die if unable to open private key file
 * lib/Mail/DKIM/Signer.pm: no more need for a separate existance check
   on the private key filename
 * lib/Mail/DKIM/Signature.pm: allow Identity to be specified in new()
 * lib/Mail/DKIM/Signer.pm: allow Identity to be specified in new()
 * t/signer.t: test that specifying Identity works

2007-10-02: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Canonicalization/DkCommon.pm: there are some varying
   opinions about how to verify DomainKey-signed messages when there is
   an h= tag and the headers are in a different order... this is an
   attempt at making our verifier more compatible with other
   implementations
 * dk_headers.txt: some notes on multiple-occuring headers

2007-09-06: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Policy.pm (get_lookup_name): new method that determines
   the name of the record to lookup
 * lib/Mail/DKIM/DkimPolicy.pm: no longer need to override fetch(), now
   it just overrides get_lookup_name()

 -- VERSION 0.28 --

2007-07-31: Jason Long <jlong@messiah.edu>
 * Makefile.PL: OpenSSL 0.23 segfaults on certain signatures, so
   the requirement is now Crypt::OpenSSL::RSA 0.24 or better
 * lib/Mail/DKIM/KeyValueList.pm: don't split the header in the middle
   of a tag name

 -- VERSION 0.27 --

2007-07-25: Jason Long <jlong@messiah.edu>